--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,41 @@
 {
   "cSpell.words": [
-    "reedws"
+    "aspnet",
+    "cechuser",
+    "childitem",
+    "cmdlets",
+    "Commandlets",
+    "commandtype",
+    "countup",
+    "displayname",
+    "dunkel",
+    "firewalld",
+    "gridview",
+    "IPADDR",
+    "ipaddress",
+    "JSONified",
+    "lxml",
+    "MACHTYPE",
+    "mkdir",
+    "netipaddress",
+    "Netlogon",
+    "Netman",
+    "netprofm",
+    "NOPASSWD",
+    "noprefixroute",
+    "puttygen",
+    "pwsh",
+    "reedws",
+    "Regexdrill",
+    "setuptools",
+    "subfolders",
+    "sysinfo",
+    "Traceback",
+    "urllib",
+    "urlopen",
+    "venv",
+    "venvs",
+    "virtualenv",
+    "Whatif"
   ]
 }
