--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "check-updates:all": "ncu --configFileName .check-updates.json --target latest --errorLevel 1"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.1",
-    "@docusaurus/preset-classic": "2.0.1",
+    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/preset-classic": "^2.4.1",
     "@material-ui/core": "^4.12.4",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
@@ -30,19 +30,19 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.1",
-    "@tsconfig/docusaurus": "^1.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "^8.22.0",
+    "@docusaurus/module-type-aliases": "^2.4.1",
+    "@tsconfig/docusaurus": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-import-quotes": "^0.0.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-sort-destructure-keys": "^1.4.0",
-    "npm-check-updates": "^16.0.5",
-    "typescript": "^4.7.4"
+    "eslint-plugin-sort-destructure-keys": "^1.5.0",
+    "npm-check-updates": "^16.10.13",
+    "typescript": "^4.9.5"
   },
   "browserslist": {
     "production": [
